# CodeCanvas

./: CMakeLists.txt  README.md  WallpaperSetter.cpp  build.gradle.kts  package-lock.json  package.json  settings.gradle.kts
Dock/: compile-dock.bat
Dock/src/cpp/: CMakeLists.txt  DockBar.cpp  build.bat
Dock/src/electron/: dock-manager.js  dock-preload.js  main-integration.js
Dock/src/electron/renderer/: DockPage.jsx  DockSettings.browser.jsx  DockSettings.css  DockSettings.jsx
gradle/wrapper/: gradle-wrapper.properties
my-electron-app/: main.js  package-lock.json  package.json  preload.js  preload.js.new
my-electron-app/renderer/: index.html  index.js
my-electron-app/renderer/js/: DockSettings.browser.jsx
my-electron-app/renderer/styles/: DockSettings.css  main.css  workshop.css
my-electron-app/src/components/: WallpaperGrid.js  Workshop.jsx
my-electron-app/src/styles/: Workshop.css
src/main/CPP/StaticWallPaper/: CMakeLists.txt  StaticWallPaper.cpp
src/main/CPP/WallPaperCore/: CMakeLists.txt  WallPaperCore.cpp
src/main/java/org/example/: WallpaperManager.java
src/main/java/org/example/config/: WorkshopApiSpringConfig.java
src/main/java/org/example/controller/: WallpaperController.java  WorkshopController.java
src/main/java/org/example/model/: Wallpaper.java  Workshop.java
src/main/java/org/example/service/: WallpaperService.java  (+1 more)
src/main/resources/: application.properties
wallpapers/4bc3744d-5057-4483-95e5-ae5882908377/: info.json
widgets/: 6b90a308-b1db-4c47-984a-18026424eda7.json  7c50732d-7b2f-46e2-a6b5-08276ccc7f47.json  869a8ffa-808e-4395-a57f-db0c2d687051.json  995f65c9-784b-4d79-88df-b4b20e1f6df1.json  aa74a037-64b7-4d4e-8bd5-ede7396daa22.json  e419fed9-5a7d-47eb-a62a-cfc5e14c2412.json  f0c018e4-bd20-475b-87dc-16537fc8e697.json  fd1ca78f-606d-4c55-9395-b125f7278d25.json
(+5 files in other folders)
